[package]
name = "rust-opensoftwarelauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# async main
tokio = { version = "1", features = ["full"] }

# json 
serde_json="*"
serde = { version = "1.0", features = ["derive"] }
optional_struct = "*"

# http
reqwest = { version = "0.11", features = ["json", "native-tls"] }

